<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Selfnet Wi-Fi Setup</string>

	<string name="provide_selfnet_credentials">Please provide your MySelfnet credentials</string>
	<string name="myselfnet_url" translatable="false">https://my.selfnet.de</string>
	<string name="default_email_hint" translatable="false">your@email.com</string>
	<string name="password_hint">MySelfnet Password</string>
	<string name="create_connection_entry_button">Create connection entry</string>
	<string name="selfnet_wlan_manual_url" translatable="false">https://www.selfnet.de/wlan-guide</string>
	<string name="screen_lock_hint">Note: If you did not setup a screen lock, Android will refuse to store the security settings!</string>

	<string name="ABOUT_TITLE">About</string>
	<string name="EXIT_TITLE">Exit</string>
	<string name="HELP_TITLE">Help</string>
	<string name="PRIVACY_TITLE">Privacy Agreement</string>
	<string name="PRIVACY_AGREEMENT">This Privacy Policy clarifies the users of the \"Selfnet Wifi-Config\" app offered by \"Selfnet e.V. Allmandring 8a 70569 in Stuttgart\", hereinafter referred to as App, about the use of personal data in the App. Through the app, the email address and password for the services of the provider are collected and translated into a WiFi profile to access the provider\'s WiFi infrastructure on the user\'s smartphone. Apart from that, the data will not be transferred or stored by the app in any way.</string>

	<string name="ABOUT_CONTENT">This application configures the Selfnet Wi-Fi for your smartphone.</string>
	<string name="HELP_TEXT">If you face any issues connecting to the wireless LAN please check whether you typed in your password and email address correctly.\nIf this doesn\'t help contact <a href="mailto:support@selfnet.de">support@selfnet.de</a>.</string>
	<string name="logo_alt_test">Selfnet Logo</string>
	<string name="success_title">Success!</string>
	<string name="error_title">ERROR!</string>
	<string name="email_ends_with_whitespace">Email address ends with whitespaces - please remove them.</string>
	<string name="success_explain_text">A Wi-Fi connection entry with the correct security settings was created.\n\nIf you face problems connecting to the Selfnet Wi-Fi please check whether you\'ve provided the correct credentials. This message only confirms the profile\'s creation but doesn\'t validate you username and password.</string>
	<string name="error_explain_text">Something went wrong: %s</string>
	<string name="no_credentials_provided">Please provide your Wi-Fi credentials from MySelfnet.</string>
</resources>
