<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:id="@+id/FirstView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/logonLayout"
    android:orientation="vertical"
    android:gravity="center_horizontal|top"
    android:weightSum="1">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo_alt_test"
        android:src="@drawable/logo"
        android:padding="0dp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:autoLink="web"
        android:layout_marginTop="15dp"
        android:text="@string/selfnet_wlan_manual_url" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/labelkeystore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:text="@string/screen_lock_hint" />

    <LinearLayout
        android:id="@+id/logindata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/logintext"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:text="@string/provide_selfnet_credentials"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="0.27"
            android:autoLink="web"
            android:text="@string/myselfnet_url" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/default_email_hint"
            android:inputType="textEmailAddress"
            android:padding="5dp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="0.15"
        android:background="#ff5a17"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:onClick="createConnectionEntryClick"
        android:text="@string/create_connection_entry_button" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" />
</LinearLayout>
</ScrollView>
